Prevent UI overlap

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -294,7 +294,7 @@
         }
 
         .plugin-item-state-indicator-container {
-            z-index: 2;
+            z-index: 1;
             position: absolute;
             left: 8px;
             top: 8px;
